@@ -1,10 +1,24 @@
+import org.gradle.api.tasks.testing.Test
+import org.gradle.api.tasks.wrapper.Wrapper
+
 /*
  * user guide available at https://docs.gradle.org/4.3.1/userguide/tutorial_java_projects.html
  */
 apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'idea'
+
+defaultTasks 'clean', 'test'
 
 sourceSets {
-    test.java.srcDir "src/test"
+    main {
+        java { srcDir 'src' }
+        resources { srcDir 'src' }
+    }
+    test {
+        java { srcDir 'test' }
+        resources { srcDir 'test' }
+    }
 }
 
 repositories {
@@ -21,29 +35,25 @@ configurations {
 dependencies {
     compile 'com.codeborne:selenide:4.8'
     compile 'org.junit:junit5-engine:5.0.0-ALPHA'
-    compile 'org.apache.commons:commons-pool2:2.4.3'
-    compile 'org.apache.maven.plugins:maven-surefire-report-plugin:2.20.1'
     compile 'info.cukes:cucumber-java:1.2.5'
     compile 'info.cukes:cucumber-junit:1.2.5'
     compile 'com.google.guava:guava:23.5-jre'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile fileTree(dir: 'libs', include: '*.jar')
 
 }
 
-/*test {
-    dependsOn assemble, compileTestJava
-    testLogging.showStandardStreams = true
-    systemProperties System.getProperties()
-}*/
-
-//ext.greeting = project.hasProperty('selenide.browser') ? project.getProperty('selenide.browser') : '${selenide.browser}'
-
 test {
-/*    systemProperties = [
-            'selenide.browser': System.getProperty("selenide.browser"),
-            'selenide.baseUrl': System.getProperty("selenide.baseUrl"),
-    ]*/
+/*    dependsOn assemble, compileTestJava
+    systemProperties System.getProperties()*/
     testLogging.showStandardStreams = true
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
+    }
 }
 
 task wrapper(type: Wrapper) {
@@ -52,36 +62,30 @@ task wrapper(type: Wrapper) {
     scriptFile = './gradle'
 }
 
-task runFeature ( type: Test, dependsOn: test) {
-    include '**/*PUC_Feature_Suite.class'
-    exclude '**/*PUC_Test_Suite.class'
+task runFeature(type: Test, dependsOn: test) {
+    scanForTestClasses = false
+    includes = ['**suites.PUC_Feature_Suite.class']
+
+/*    include '**suites.PUC_Feature_Suite.class'
+    exclude 'tests.PUC_SmokeTest.class'
+    exclude '**//*PUC_Test_Suite.class'*/
 }
 
-
-task runTest(type: Test, dependsOn: testClasses) {
-    include '**/*PUC_Test_Suite.class'
+task runUITest(type: Test, dependsOn: testClasses) {
+    scanForTestClasses = false
+    includes = ['**/*PUC_Test_Suite.class']
 }
 
-/*test {
-    // set a system property for the test JVM(s)
-    //systemProperty 'some.prop', 'value'
+task runSmokeTest(type: Test, dependsOn: testClasses) {
+    scanForTestClasses = true
+    includes = ['**/*PUC_SmokeTest_Suite.class']
+}
 
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
+tasks.withType(Test) {
+    testLogging {
+        events 'started', 'passed'
     }
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-}*/
+}
 
 /*task testCucumber(type: JavaExec, dependsOn: [testClasses]) {
     description = 'Runs all feature files with Cucumber'
@@ -106,36 +110,5 @@ task runTest(type: Test, dependsOn: testClasses) {
             args = ['--plugin', 'pretty', '--glue', 'src/main/java/steps', 'src/test/java/features']
 
         }
-    }
-}*/
-
-/*
-task executeFeatures(type: Test) {
-    // enable TestNG support (default is JUnit)
-    //useTestNG()
-    options {
-        //useDefaultListeners = false
-        listeners << ''
-        jvmArgs = ['-Dcucumber.options= ' +
-                           '--glue org.company.app ' +
-                           '--plugin pretty ' +
-                           '--plugin json:build/cucumber/cucumber.json ' +
-                           '--plugin rerun:build/cucumber/rerun.txt ' +
-                           //splitFeatureFolders(featureFolders) + ' ' +
-                           cucumberOptions]
-    }
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    // set JVM arguments for the test JVM(s)
-    scanForTestClasses = false
-    // ignoreFailures = true
-
-    //turn off Gradle's HTML report to avoid replacing the reports generated by TestNG library:
-    reports.html.enabled = false
-
-    doLast {
-        generateReport('build/cucumber/cucumber.json', 'build/cucumber/reports')
     }
 }*/
